add markup header

--- a/index.html
+++ b/index.html
@@ -412,20 +412,7 @@
             <ul class="portfolio_list">
 
                 <li class="portfolio_list_item">
-                  <picture>
-                    <source media="(min-width: 1158px)" 
-                    srcset="./images/portfolio/App-desk-min.jpg 1x, 
-                    ./images/portfolio/App-desk@2x-min.jpg 2x"/>
-
-                    <source media="(min-width: 768px)" 
-                    srcset="./images/portfolio/App-tab-min.jpg 1x, 
-                    ./images/portfolio/App-tab@2x-min.jpg 2x"/>
-
-                    <source media="(max-width: 767px)" 
-                    srcset="./images/portfolio/App-mob-min.jpg 1x, 
-                    ./images/portfolio/App-mob@2x-min.jpg 2x"/>
-                    
-                  </picture>
+                  <!--Photo1-->
                   <div class="overlay">
                   <picture>
                     <source media="(min-width: 1158px)" 
@@ -439,7 +426,7 @@
                     <source media="(max-width: 767px)" 
                     srcset="./images/portfolio/App-mob-min.jpg 1x, 
                     ./images/portfolio/App-mob@2x-min.jpg 2x"/>
-                    <img alt="Photo" width="360" height="300" class="overlay">
+                    <img src="#" alt="Photo" width="360" height="300" class="overlay">
                   </picture> 
                       <p class="overlay_text">
                       14 Stylish and User-Friendly App Design Concepts · Task
@@ -457,6 +444,7 @@
                 </li>
 
                 <li class="portfolio_list_item">
+                  <!--Photo2-->
                   <div class="overlay">
                   <picture>
                     <source media="(min-width: 1158px)" 
@@ -470,7 +458,7 @@
                     <source media="(max-width: 767px)" 
                     srcset="./images/portfolio/Cash-mob-min.jpg 1x, 
                     ./images/portfolio/Cash-mob@2x-min.jpg 2x"/>
-                    <img alt="Photo" width="360" height="300" class="overlay">
+                    <img src="#" alt="Photo" width="360" height="300" class="overlay">
                   </picture> 
                  <p class="overlay_text">
                       14 Stylish and User-Friendly App Design Concepts · Task
@@ -486,6 +474,7 @@
                 </li>
 
                 <li class="portfolio_list_item">
+                  <!--Photo3-->
                   <div class="overlay">
                   <picture>
                     <source media="(min-width: 1158px)" 
@@ -499,7 +488,7 @@
                     <source media="(max-width: 767px)" 
                     srcset="./images/portfolio/Med-App-mob-min.jpg 1x, 
                     ./images/portfolio/Med-App-mob@2x-min.jpg 2x"/>
-                    <img alt="Photo" width="360" height="300" class="overlay">
+                    <img src="#" alt="Photo" width="360" height="300" class="overlay">
                   </picture>  
                   <p class="overlay_text">
                       14 Stylish and User-Friendly App Design Concepts · Task
@@ -515,6 +504,7 @@
                 </li>
 
                 <li class="portfolio_list_item">
+                  <!--Photo4-->
                   <div class="overlay">
                   <picture>
                     <source media="(min-width: 1158px)" 
@@ -528,7 +518,7 @@
                     <source media="(max-width: 767px)" 
                     srcset="./images/portfolio/Taxi-mob-min.jpg 1x, 
                     ./images/portfolio/Taxi-mob@2x-min.jpg 2x"/>
-                    <img alt="Photo" width="360" height="300" class="overlay">
+                    <img src="#" alt="Photo" width="360" height="300" class="overlay">
                   </picture> 
                  <p class="overlay_text">
                       14 Stylish and User-Friendly App Design Concepts · Task
@@ -544,6 +534,7 @@
                 </li>
 
                 <li class="portfolio_list_item">  
+                  <!--Photo5-->
                   <div class="overlay">     
                 <picture>
                     <source media="(min-width: 1158px)" 
@@ -557,7 +548,7 @@
                     <source media="(max-width: 767px)" 
                     srcset="./images/portfolio/Screen-mob-min.jpg 1x, 
                     ./images/portfolio/Screen-mob@2x-min.jpg 2x"/>
-                    <img alt="Photo" width="360" height="300" class="overlay">
+                    <img src="#" alt="Photo" width="360" height="300" class="overlay">
                   </picture> 
                  <p class="overlay_text">
                       14 Stylish and User-Friendly App Design Concepts · Task
@@ -573,6 +564,7 @@
                 </li> 
 
                 <li class="portfolio_list_item">
+                  <!--Photo6-->
                   <div class="overlay">
                   <picture>
                     <source media="(min-width: 1158px)" 
@@ -586,7 +578,7 @@
                     <source media="(max-width: 767px)" 
                     srcset="./images/portfolio/Online-Coursers-mob-min.jpg 1x, 
                     ./images/portfolio/Online-Coursers-mob@2x-min.jpg 2x"/>
-                    <img alt="Photo" width="360" height="300" class="overlay">
+                    <img src="#" alt="Photo" width="360" height="300" class="overlay">
                   </picture>
                   <p class="overlay_text">
                       14 Stylish and User-Friendly App Design Concepts · Task
@@ -740,12 +732,12 @@
             <input
               id="user-privacy"
               type="checkbox"
-              name="user-privacy"
+              name="user-privacy-1"
               value="true"
               class="visually-hidden checkbox-input"
             />
-<label class="form_label" for="user-privacy">
-  <input type="checkbox" id="user-privacy" class="checkbox-input visually-hidden" />
+<label class="form_label" for="user-privacy-3">
+  <input type="checkbox" id="user-privacy-3" class="checkbox-input visually-hidden" />
   <span class="checkbox_custom" aria-hidden="true">
     <svg width="10" height="8" class="checkbox_icon">
       <use href="./images/icons.svg#icon-vector"></use>
